# Hybrid-Wireguard

./: CLAUDE.md  Cargo.toml  Hybrid-WireGuard_协议V2.3.docx  IMPLEMENTATION_AUDIT.md  README.md  run_all.sh  run_clean_all.sh  run_install-dep-rust-clang.sh
formal/tamarin/: Dockerfile  REPORT.md  hybrid_wireguard_v23.spthy  run_docker.ps1
formal/tamarin/results/: tamarin-proof.txt  tamarin-version.txt
src/: main.rs
src/benchmarks/: benchmarks.rs
src/configuration/uapi/: set.rs
src/configuration_hybrid/: config.rs  mod.rs
src/configuration_hybrid/uapi/: get.rs  mod.rs  set.rs
src/configuration_hybrid_new/: mod.rs
src/configuration_pq_star/: config.rs  error.rs  mod.rs
src/configuration_pq_star/uapi/: get.rs  mod.rs  set.rs
src/wireguard/: benchs.rs  mod.rs  tests.rs
src/wireguard/handshake/: device.rs
src/wireguard_hybrid/: benchs.rs  mod.rs  tests.rs  timers.rs  wireguard.rs  workers.rs
src/wireguard_hybrid/handshake/: crypto_params.rs  device.rs  macs.rs  messages.rs  mod.rs  noise.rs  peer.rs  tests.rs
src/wireguard_hybrid_new/: benchs.rs  peer.rs  tests.rs  timers.rs  wireguard.rs
src/wireguard_hybrid_new/handshake/: crypto_params.rs  device.rs  macs.rs  messages.rs  noise.rs  peer.rs  tests.rs  types.rs
src/wireguard_pq_star/: benchs.rs  peer.rs  tests.rs  timers.rs  wireguard.rs  workers.rs
src/wireguard_pq_star/handshake/: crypto_params.rs  device.rs  macs.rs  messages.rs  noise.rs  peer.rs  tests.rs  types.rs
